# seeder

./: Cargo.toml  nodemon.json  package.json
build-configs/: postcss.config.js  purgeCss.js  tailwind.rust.extractor.js  webpack.config.js
src/: index.html  lib.rs  tailwind.rs
