[package]
name = 'rust-webpack-template'
description = 'My super awesome Rust, WebAssembly, and Webpack project!'
version = '0.1.0'
authors = ['You <you@example.com>']
categories = ['wasm']
readme = 'README.md'
edition = '2018'

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true

[features]
default = ['wee_alloc']

[dependencies]
wasm-bindgen = '0.2.55'
seed = '0.4.2'

[dependencies.wee_alloc]
version = '0.4.5'
optional = true

[dependencies.web-sys]
version = '0.3.32'
features = ['console']
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = '0.1.6'

[dev-dependencies]
wasm-bindgen-test = '0.3.5'
futures = '0.3.1'
js-sys = '0.3.32'
wasm-bindgen-futures = '0.4.5'
